# lerobot_convertor

./: .gitignore  README.md  pyproject.toml
scripts/: aggregate_lerobot_datasets.py  inspect_hdf5.py  miku_hdf5_adapter.py  miku_hdf5_adapter_guide.md
src/lerobot_converter/: __init__.py  base.py  hdf5_adapter.py  lerobot_target.py  models.py  rlds_adapter.py  utils.py
src/lerobot_convertor/: __init__.py  base.py  hdf5_adapter.py  lerobot_target.py  models.py  rlds_adapter.py  utils.py
