[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Wentian Chen"
version = "0.1.0"
description = "Extensible source-to-LeRobot dataset conversion toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "LeRobot Convertor Maintainers" }
]
keywords = ["robotics", "dataset", "conversion", "lerobot", "hdf5", "rlds"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]
dependencies = [
  "draccus>=0.8.0",
  "numpy>=1.24",
  "h5py>=3.10",
  "lerobot"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.8"
]

[tool.setuptools]
packages = ["lerobot_convertor"]

[tool.setuptools.package-dir]
lerobot_convertor = "."
